--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,5 +3,5 @@
   <input type="text" name="name" value="Name">
   <input type="text" name="email" value="Email">
   <input type="text" name="password" value="Password">
+  <input type="submit" value="Sign Up">
 </form>
-
