--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,7 +1,8 @@
 <h1>Sign Up Below:</h1>
-<form action="/registrations" method="post">
-  <input type="text" name="name" value="Name">
-  <input type="text" name="email" value="Email">
-  <input type="text" name="password" value="Password">
+
+<form method="POST" action="/registrations" >
+  Name: <input id="name" type="text" name="name">
+  Email: <input id="email" type="text" name="email">
+  Password: <input id="password" type="text" name="password">
   <input type="submit" value="Sign Up">
 </form>
