automatically backed up by learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,8 +1,7 @@
 <h1>Sign Up Below:</h1>
-
-<form method="POST" action="/registrations" >
-  Name: <input id="name" type="text" name="name">
-  Email: <input id="email" type="text" name="email">
-  Password: <input id="password" type="text" name="password">
+<form action="/registrations" method="post">
+  <input type="text" name="name" value="Name">
+  <input type="text" name="email" value="Email">
+  <input type="text" name="password" value="Password">
   <input type="submit" value="Sign Up">
 </form>
